FIX(projects) small devices collapse with med

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -36,8 +36,8 @@
       left: 50%;
       transform: translate(-50%, -50%);
       @include small {
-        bottom: -20%;
-        font-size: 20vw;
+        bottom: -12%;
+        font-size: 15vw;
       }
       @include medium {
         bottom: -20%;
@@ -102,8 +102,8 @@
       left: 50%;
       transform: translate(-50%, -50%);
       @include small {
-        top: -10%;
-        font-size: 20vw;
+        top: -5%;
+        font-size: 15vw;
       }
       @include medium {
         top: -10%;
@@ -196,8 +196,8 @@
       left: 50%;
       transform: translate(-50%, -50%);
       @include small {
-        bottom: -20%;
-        font-size: 20vw;
+        bottom: -12%;
+        font-size: 15vw;
       }
       @include medium {
         bottom: -20%;
