--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -28,7 +28,7 @@ body {
 }
 
 @mixin medium {
-  @media only screen and (max-width: 834px) {
+  @media only screen and (min-width: 651px) and (max-width: 834px) {
     @content;
   }
 }
